cluster/base/mealie/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealiedb
  namespace: mealie
  labels:
    app: mealiedb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealiedb
  template:
    metadata:
      labels:
        app: mealiedb
    spec:
      nodeSelector:
        node-role.kubernetes.io/storage: "true"
      containers:
      - name: postgres
        image: postgres:18.4-alpine3.22
        args: [ "-p", "$(DB_PORT)" ]
        ports:
        - containerPort: 5432
          name: postgres
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - pg_isready -U $(POSTGRES_USER) -p $(DB_PORT)
          initialDelaySeconds: 5
          periodSeconds: 3
          timeoutSeconds: 1
          failureThreshold: 10
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mealie-db
