cluster/base/mealie/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealiedb
  namespace: mealie
spec:
  type: ClusterIP
  selector:
    app: mealiedb
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
